# server/controllers/authController.js
@@ -1,5 +1,4 @@
 import User from '@models/User';
-import Mail from 'friendly-mail';
 import config from '@config';
 import jwt from 'jsonwebtoken';
 
@@ -49,4 +48,32 @@ const verifyEmail = async (req, res) => {
     });
 };
 
-export default { signUp, verifyEmail };
+const sendResetLink = async (req, res) => {
+    await req.user.createResetLink();
+
+    return res.status(200).jsend({
+        message: 'Check your email for password reset link.'
+    });
+};
+
+const getResetPage = async (req, res) =>
+    res.status(200).render('reset-password/reset', {
+        token: req.user.resettoken,
+        url: config.server.url
+    });
+
+const resetPassword = async (req, res) => {
+    await req.user.resetPassword(req.body.password);
+
+    return res.status(200).jsend({
+        message: 'password reset successfull'
+    });
+};
+
+export default {
+    signUp,
+    verifyEmail,
+    sendResetLink,
+    getResetPage,
+    resetPassword
+};
