# server/middleware/validators/authValidator.js
@@ -1,4 +1,5 @@
-import { sanitize } from 'indicative';
+import { validateAll, sanitize } from 'indicative';
+import User from '@models/User';
 
 import {
     validatorInstance,
@@ -27,5 +28,65 @@ const signUp = (req, res, next) => {
             res.status(422).jerror('ValidationFailed', errors);
         });
 };
-/* add other auth validators here */
-export default { signUp };
+
+const getResetPage = async (req, res, next) => {
+    const { token } = req.params;
+    const row = await User.query()
+        .where('resettoken', token)
+        .where('resetexpire', '>', new Date());
+    req.user = row[0];
+    if (req.user) return next();
+    res.status(422).jerror('ValidationFailed', [
+        {
+            message: 'reset token is invalid'
+        }
+    ]);
+};
+
+const sendResetLink = (req, res, next) => {
+    const rules = { email: 'required|email' };
+    let data = req.body;
+    data = sanitize(data, { email: 'trim' });
+
+    validateAll(data, rules, messages)
+        .then(async () => {
+            const row = await User.query().where('email', data.email);
+            req.user = row[0];
+            if (req.user) return next();
+            res.status(404).jerror('ValidationFailed', [
+                {
+                    message: 'email does not exist'
+                }
+            ]);
+        })
+        .catch(errors => {
+            res.status(422).jerror('ValidationFailed', errors);
+        });
+};
+
+const resetPassword = (req, res, next) => {
+    const rules = {
+        token: 'required',
+        password: 'required|min:8|alpha_numeric|confirmed'
+    };
+    const data = req.body;
+
+    validateAll(data, rules, messages)
+        .then(async () => {
+            const row = await User.query()
+                .where('resettoken', data.token)
+                .where('resetexpire', '>', new Date());
+            req.user = row[0];
+            if (req.user) return next();
+            res.status(422).jerror('ValidationFailed', [
+                {
+                    message: 'reset token is invalid'
+                }
+            ]);
+        })
+        .catch(errors => {
+            res.status(422).jerror('ValidationFailed', errors);
+        });
+};
+
+export default { signUp, getResetPage, sendResetLink, resetPassword };
