# server/models/User.js
@@ -28,6 +28,51 @@ class User extends Model {
             .subject('Welcome Onboard')
             .send();
     }
+
+    async createResetLink() {
+        const token = crypto.randomBytes(20).toString('hex');
+        const date = new Date();
+        date.setHours(date.getHours() + 2);
+
+        await this.constructor
+            .knex()
+            .table('users')
+            .where('email', this.email)
+            .update({
+                resettoken: token,
+                resetexpire: date
+            });
+
+        await this.sendResetEmail(token);
+    }
+
+    async sendResetEmail(token) {
+        await new Mail('reset-password')
+            .to(this.email)
+            .subject('You requested for a password reset.')
+            .data({
+                name: this.firstName,
+                url: `${config.server.url}/api/v1/auth/reset/${token}`
+            })
+            .send();
+    }
+
+    async resetPassword(password) {
+        await this.$query().patch({
+            password: bcrypt.hashSync(password)
+        });
+
+        await this.constructor
+            .knex()
+            .table('users')
+            .where({
+                email: this.email
+            })
+            .update({
+                resettoken: null,
+                resetexpire: null
+            });
+    }
 }
 
 export default User;
