# server/routes/v1/auth.js
@@ -1,10 +1,26 @@
 import express from 'express';
-import Validator from '@validators/authValidator';
+import authValidator from '@validators/authValidator';
 import authController from '@controllers/authController';
 
 const router = express.Router();
 
-router.post('/signup', Validator.signUp, authController.signUp);
+router.post('/signup', authValidator.signUp, authController.signUp);
 router.post('/verify/:verificationCode', authController.verifyEmail);
+
+router.get(
+    '/reset/:token',
+    authValidator.getResetPage,
+    authController.getResetPage
+);
+router.post(
+    '/reset',
+    authValidator.sendResetLink,
+    authController.sendResetLink
+);
+router.patch(
+    '/reset',
+    authValidator.resetPassword,
+    authController.resetPassword
+);
 
 export default router;
